// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CTableCaption customize 1`] = `
<table>
  <caption>
    Test
  </caption>
</table>
`;

exports[`loads and displays CTableCaption component 1`] = `
<table>
  <caption />
</table>
`;
